# Amulet-NBT

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  requirements_build.txt  setup.cfg  setup.py  template.py
.circleci/: config.yml
.github/workflows/: python-build.yml  python-deploy.yml  python-stylecheck.yml  python-test.yml  python-unittests.yml
amulet_nbt/: BaseFloatTag.pyx.in  BaseImmutableTag.pyx.in  BaseIntTag.pyx.in  BaseMutableTag.pyx.in  BaseNamedTag.pyx.in  BaseNumericTag.pyx.in  BaseTag.pyx.in  __init__.pxd  __init__.py  _array.pxd  _array.pyi  _array.pyx  _array.pyx.in  _compound.pxd  _compound.pyi  _compound.pyx  _compound.pyx.in  _dtype.py  _dtype.pyx  _float.pxd  _float.pyi  _float.pyx  _float.pyx.in  _int.pxd  _int.pyi  _int.pyx  _int.pyx.in  _list.pxd  _list.pyi  _list.pyx  _list.pyx.in  _load_nbt.pxd  _load_nbt.pyi  _load_nbt.pyx  _load_snbt.pxd  _load_snbt.pyi  _load_snbt.pyx  _named_tag.pxd  _named_tag.pyi  _named_tag.pyx  (+59 more)
amulet_nbt/__pyinstaller/: hook-amulet_nbt.py
amulet_nbt/amulet_nbt_py/: __init__.py  _load.py  const.py  data_types.py
build_tools/: cythonise.py
docs_source/: conf.py  getting_started.rst  index.rst
docs_source/api_reference/: ByteArrayTag.rst  ByteTag.rst  CompoundTag.rst  DoubleTag.rst  FloatTag.rst  IntArrayTag.rst  IntTag.rst  ListTag.rst  LongArrayTag.rst  LongTag.rst  NamedTag.rst  ShortTag.rst  StringTag.rst  abc.rst  errors.rst  index.rst  load.rst  string_encoding.rst  tag_byte.rst  tag_byte_array.rst  tag_compound.rst  tag_double.rst  tag_float.rst  tag_int.rst  tag_int_array.rst  tag_list.rst  tag_long.rst  tag_long_array.rst  tag_short.rst  tag_string.rst
docs_source/getting_started/: index.rst
requirements/: requirements-main.txt  requirements-setup.txt
src/amulet_nbt/: __init__.pxd  __init__.py  __init__.pyi  _array.pyx  _compound.pxd  _compound.pyi  _compound.pyx  _const.pyx  _errors.py  _errors.pyx  _float.pxd  _float.pyi  _float.pyx  _int.pyi  _int.pyx  _list.pxd  _list.pyx  _load_nbt.pyi  _load_nbt.pyx  _load_snbt.pyx  _named_tag.pxd  _string.pyi  _string.pyx  _util.pxd  _util.pyi  _version.py  amulet_cy_nbt.pyx  amulet_py_nbt.py
src/nbt/: array.hpp  endian.hpp  endian.pxd  nbt.hpp  read.cpp  read.hpp
src/utf8/: notes.txt
src_/amulet_nbt/: __init__.pyx
template/: __init__.py  __main__.py  tempita.py  wrapper.py
template/src/: _array.pyx  _compound.pyx  _float.pyx  _int.pyx  _list.pyx  _named_tag.pyx  _string.pyx
template/templates/: AbstractBaseArrayTag.pyx  AbstractBaseFloatTag.pyx  AbstractBaseImmutableTag.pyx  AbstractBaseIntTag.pyx  AbstractBaseMutableTag.pyx  AbstractBaseNumericTag.pyx  AbstractBaseTag.pyx  BaseArrayTag.pyx  BaseFloatTag.pyx  BaseFloatTag.pyx.in  BaseImmutableTag.pyx  BaseImmutableTag.pyx.in  BaseIntTag.pyx  BaseIntTag.pyx.in  BaseMutableTag.pyx  (+8 more)
tests/: api_tests.py  base_type_test.py  bigtest.snbt  binary_data.py  gen_data.py  massive_nbt_test.py  nbt_tests.py  test_api.py  test_array.py  test_compound.py  test_copy.py  test_file_nbt.py  test_hash.py  test_isinstance.py  test_legacy.py  test_list.py  test_massive_nbt.py  test_nbt.py  test_nbt_read_write.py  test_numerical.py  test_pickle.py  test_repr.py  test_snbt.py  test_strict_equals.py  test_string.py  test_tempita.py  test_value.py
tools/: tempita.py
(+335 files in other folders)
