
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = amulet_nbt/_version.py
versionfile_build = amulet_nbt/_version.py
tag_prefix =
parentdir_prefix = amulet_nbt-

[options.entry_points]
pyinstaller40 =
    hook-dirs = amulet_nbt.__pyinstaller:get_hook_dirs

[metadata]
name = amulet-nbt
url = https://www.amuletmc.com
author = Ben Gothard, James Clare
author_email = amuleteditor@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = Read and write Minecraft NBT and SNBT data.
platforms = any

[options]
python_requires = >=3.6
dependency_links =
    https://github.com/numpy/numpy
