[metadata]
name = amulet-nbt
url = https://www.amuletmc.com
author = James Clare, Ben Gothard
author_email = amuleteditor@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = Read and write Minecraft NBT and SNBT data.
long_description = file: README.md
platforms = any


[options]
zip_safe = False
include_package_data = True
python_requires = ~=3.6
install_requires =
    numpy ~= 1.22
    mutf8 ~= 1.0


[options.extras_require]
docs =
    Sphinx>=1.7.4
    sphinx-autodoc-typehints>=1.3.0
    sphinx_rtd_theme>=0.3.1
dev =
    black>=22.3
    pre_commit>=1.11.1


[options.entry_points]
pyinstaller40 =
    hook-dirs = amulet_nbt.__pyinstaller:get_hook_dirs


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = amulet_nbt/_version.py
versionfile_build = amulet_nbt/_version.py
tag_prefix =
parentdir_prefix = amulet_nbt-
