[metadata]
name = amulet-nbt
url = https://www.amuletmc.com
author = James Clare, Ben Gothard
author_email = amuleteditor@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = Read and write Minecraft NBT and SNBT data.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any


[options]
package_dir=
    =src
packages = find:
zip_safe = False
python_requires = ~=3.11
install_requires =
    numpy >= 1.17, < 3.0

[options.packages.find]
where=src

[options.package_data]
amulet_nbt =
    *.pyi
    py.typed
    *.pyd
    *.so
    *.dylib
    **/*.hpp
    cpp/**/*.cpp


[options.extras_require]
docs =
    Sphinx>=1.7.4
    sphinx-autodoc-typehints>=1.3.0
    sphinx_rtd_theme>=0.3.1
dev =
    black>=22.3
    pre_commit>=1.11.1
    cython >= 3.0.0a9
    mypy
    types-pyinstaller


[options.entry_points]
pyinstaller40 =
    hook-dirs = amulet_nbt.__pyinstaller:get_hook_dirs


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/amulet_nbt/_version.py
versionfile_build = amulet_nbt/_version.py
tag_prefix =
parentdir_prefix = amulet_nbt-
